change line color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            } 
            h2{
             
-            color:pink;
+            color:rgb(241, 4, 43);
             
         }
 
