--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         background-color:rgba(57, 194, 98, 0.397);
     }
     </style>
-    <h1>this is my first website</h1>
-    <h2>i am ritesh roy</h2>
+    <h1>This is my first website</h1>
+    <h2>i am Ritesh Roy</h2>
+    <a href="https://code.visualstudio.com/download"> download  vs code  to click </a>; 
+    
     <style>
            h1{
             color:rgb(67, 146, 84);
